@@ -39,3 +39,15 @@ Info: This package Build-Depends on the Python 2.x version of the Sphinx
  Some Python modules may need to depend on both <tt>python-sphinx</tt> and
  <tt>python3-sphinx</tt> but please consider moving to only Build-Depending on
  the <tt>python3-sphinx</tt> package instead.
+
+Tag: alternatively-build-depends-on-python-sphinx-and-python3-sphinx
+Severity: normal
+Certainty: certain
+Info: This package alternatively Build-Depends on the Python 2 or Python 3
+ version of the Sphinx documentation generator.
+ .
+ The 2.x series of Python is due for deprecation and will not be maintained
+ past 2020.
+ .
+ Please replace the alternative with a single build dependency on
+ <tt>python3-sphinx</tt>.
