@@ -1,0 +1,5 @@
+Testname: python-build-depends-on-sphinx-alternative
+Version: 1.0
+Description: Check packages that Build-Depend on python-sphinx | python3-sphinx
+Test-For:
+ alternatively-build-depends-on-python-sphinx-and-python3-sphinx
