@@ -1,0 +1,1 @@
+W: python-build-depends-on-sphinx-alternative source: alternatively-build-depends-on-python-sphinx-and-python3-sphinx
