@@ -2,4 +2,5 @@ Testname: python-build-depends-on-sphinx-unrel
 Version: 1.0
 Description: Check packages that Build-Depend on python-sphinx
 Test-Against:
+ alternatively-build-depends-on-python-sphinx-and-python3-sphinx
  build-depends-on-python-sphinx-only
