@@ -39,6 +39,8 @@ lintian (2.5.53) UNRELEASED; urgency=medium
       to assist in Python 2.x deprecation.  (Closes: #870681)
     + [CL] Check for packages that Build-Depend on python-sphinx only.
       (Closes: #870730)
+    + [CL] Check for packages that alternatively Build-Depend on the
+      Python 2 and Python 3 versions of Sphinx.  (Closes: #870758)
   * checks/scripts.pm:
     + [CL] Correct false positives in
       unconditional-use-of-dpkg-statoverride by detecting "if !" as a
